Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12893

lnet: peer ni selection broken

XMLWordPrintable

    • 3
    • 9223372036854775807

      in 2.10.x the peer NID used remains the same for all LNet messages which are part of the same RPC request.

      in 2.12 and later, that requirement has been broken. This will cause a performance hit on NUMA architectures.

            ashehata Amir Shehata (Inactive)
            ashehata Amir Shehata (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: